JSAI/error/src/test/resources/base/builtins_math-sin.js
// watch out for implementation-dependent approximation
var x = Math.sin(3);
print(x);
